FIX- Dropdown in Navbar Not Visible on Hover #308

--- a/assets/scss/_navbar_project.scss
+++ b/assets/scss/_navbar_project.scss
@@ -9,14 +9,20 @@
   .current {
     color: $primary !important;
   }
+
+ @media (min-width: 768px) {
   &:hover {
     .dropdown-menu {
       display: block;
     }
+      .dropdown-menu {
+        transform: translate(-15%, 0rem) !important;
+      }
   }
+}
   .dropdown-menu {
     padding: 0;
-    transform: translate(-15%, 0rem) !important;
+    transform: translate(-15%, 2.5rem) !important;
     border-radius: 0;
     .dropdown-item {
       height: 5rem;
